--- a/embedding-jsx-in-attributes/src/index.css
+++ b/embedding-jsx-in-attributes/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.divStyle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #03fc7b;
+  text-align: center;
+}
+
+.p-text {
+  position: absolute;
+  top: 20%;
+  width: 70%;
+  font-style: italic;
+  font-size: 26px;
+  color: rgb(27, 24, 24);
+}
