--- a/transform-lists/src/index.css
+++ b/transform-lists/src/index.css
@@ -32,6 +32,15 @@ code {
   border-radius: 5px;
   box-shadow: 2px 4px 6px black;
 }
+
  h1 {
   color: #292727;
+ }
+
+ .lists:hover{
+ 
+  border-left: 20px solid rgb(255, 255, 255);
+  border-right: 20px solid rgb(255, 255, 255);
+  background-color: #292727;
+  color: white;
  }
