--- a/controlling-components/src/index.css
+++ b/controlling-components/src/index.css
@@ -12,26 +12,28 @@ code {
 
 .wrapper {
 
-  width: 30%;
+  width: 20%;
   padding: 1em;
   margin: 10% auto;
   display: flex;
   flex-direction: column;
   font-size: 22px;
-font-weight: 700;
+  font-weight: 700;
   border-radius: 15px;
   gap: 0.5em;
   border: 2px solid black;
   box-shadow: 3px 3px 4px black;
 }
 
-legend {
+h2{
   font-size: 32px;
 }
+
 input {
   border-radius: 5px;
   padding: 15px 20px;
   outline: none;
+ 
 }
 
 button { 
