--- a/feedbackform/src/index.css
+++ b/feedbackform/src/index.css
@@ -11,3 +11,49 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: whitesmoke;
+}
+.form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(233, 230, 230);
+  border-radius: 10px;
+  box-shadow: 4px 4px 11px black;
+}
+
+fieldset {
+  border: none;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.field {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 5px;
+  }
+
+  .field2 {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    gap: 10px;
+  }
+
+  .btn {
+    border-radius: 20px;
+    width: 100px;
+    align-self: center;
+    padding: 8px;
+    background-color: rgb(0, 66, 247);
+    color: white;
+    font-size: 17px;
+  }
